feat: implement Memory and MemoryManager classes for memory management functionality